--- a/Justinsport.css
+++ b/Justinsport.css
@@ -68,26 +68,22 @@ div a {
     background-repeat: no-repeat;
 }
 #background2 {
-	background: url("Port Images/background.jpg");
-    height: 100vh;
+	
+    height: 80%;
     position: relative;
     text-align: center;
-    width: 100%;
-    min-height: 250px;
     background-color: #2A3A3F;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-	margin-top:0px;
+   
 	
 }
 
 /* table positioning attributes */
 #table1 {
-	margin-left:auto;
-	margin-right:auto;
-	margin-top: 150px;
-	margin-bottom:-50px;
+  
+	padding-top: 100px;
+	padding-right:40px;
+	
+	
 }
 
 #table2 {
@@ -101,7 +97,9 @@ img {
 	height: 300px;
 	width: 400px;
 	padding: 10px;
-	
+	border-radius:25px;
+
+
 }
 
 /* footer spacing attributes */
@@ -109,7 +107,7 @@ img {
 	display: inline-block;
     width: 100%;
     height: 100px;
-	padding-bottom: 20px;
+	padding-bottom: 40px;
 	padding-top:20px;
 	background-color:lightgray;
 	
@@ -295,7 +293,7 @@ img {
     color: white;
     text-decoration: none;
     border-bottom: none;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Bungee Shade';
     transition: all .3s ease-in-out;
     font-weight: 300;
 	font-size:30px;	
@@ -329,21 +327,23 @@ a {
     color: #93a4aa;
     background-color: #fff;
     text-align: center;
-    padding-top:10px;
-	padding-bottom:80px;
+	padding-bottom:0px;
+	min-height:99%;
 
 }
 
 #projects {
     font-family: 'Montserrat', sans-serif;
-	color: #2A3A3F;
+	color: white;
+    text-shadow: 2px 2px 4px #000000;	
 	text-align:left;
 	font-size: 280%;
 	font-weight: 700;
 	margin-top:-100px;
-	padding-top:60px;
-	padding-left:130px;
+	padding-top:10px;
+	padding-left:25px;
 	margin-bottom:-15px;
+	position:relative;
 
 }
 
@@ -369,7 +369,63 @@ p.intro{
     font-size: 3.0rem;
 }
 
+.titleslate4 {
+	margin:0px;
+    color: #2A3A3F;
+	font-weight:700;
+	
+}
+
+#viewProjectButton {
+	
+	font-size: 2.0rem;
+	color:white;
+	display:inline-block;
+	text-align:center;
+	position:absolute;
+	padding-left:120px;
+    font-family: 'Bungee Shade';
+	
+}
 
 
+
+#vendText {
+	text-align:center;
+	color:#e6e6e6;
+	font-size:20px;
+    font-family: 'Bungee Shade';
+    text-shadow: 2px 2px 4px #000000;
+	padding-left:35px;
+	padding-right:35px;
+
+}
+
+#forestText {
+	text-align:center;
+	color: #e6e6e6;
+	font-size:20px;
+    font-family: 'Bungee Shade';
+    text-shadow: 2px 2px 4px #000000;	
+	padding-left:35px;
+	padding-right:70px;
+	
+}
+
+#forestPic {
+	
+	padding-right:30px;
+	
+}
+
+
+#moreSoon {
+	text-align:center;
+	color: #e6e6e6;
+	font-size:25px;
+    font-family: 'Bungee Shade';
+    text-shadow: 2px 2px 4px #000000;	
+	
+}
 
 
