--- a/Justinsport.css
+++ b/Justinsport.css
@@ -413,7 +413,7 @@ p.intro{
 	display:inline-block;
 	text-align:center;
 	position:absolute;
-	padding-left:120px;
+	padding-left:50px;
     font-family: 'Bungee Shade';
 	
 }
@@ -424,7 +424,7 @@ p.intro{
 	text-align:center;
 	color:#e6e6e6;
 	font-size:20px;
-    font-family: 'Bungee Shade';
+    font-family: 'Montserrat', sans-serif;
     text-shadow: 2px 2px 4px #000000;
 	padding-left:35px;
 	padding-right:35px;
@@ -435,7 +435,7 @@ p.intro{
 	text-align:center;
 	color: #e6e6e6;
 	font-size:20px;
-    font-family: 'Bungee Shade';
+    font-family: 'Montserrat', sans-serif;
     text-shadow: 2px 2px 4px #000000;	
 	padding-left:35px;
 	padding-right:70px;
